# OpenGL_Fundamentals

./: .gitignore  CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  Makefile  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp  main.cpp.save
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
res/shaders/: Basic.shader  basic.shader  testQuad.shader
tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestQuad.cpp  TestQuad.h  TestQuad3d.cpp  TestQuad3d.h
